# cc-python-protobuf-csfle-example

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  run-all-demos.sh  run-demo.sh
schemas/: AllTypes.proto  Customer.proto  ExampleMessage.proto  Invoice.proto  MyRecord.proto  Order.proto  Payment.proto  Product.proto  SensitiveRecord.proto  User.proto  other.proto
schemas/confluent/: meta.proto
schemas/evolution/: MyRecord_v1.proto  MyRecord_v2.proto
src/: compiled_protobuf_helpers.py  constants.py  demos.py  dynamic_protobuf_helpers.py  examples.py  field_encryption.py  kafka_helpers.py  kafka_protobuf_serdes.py  main.py  proto_schema.py  schema_registry_client.py  utilities.py
src/generated_pb2/: AllTypes_pb2.py  Customer_pb2.py  ExampleMessage_pb2.py  Invoice_pb2.py  MyRecord_pb2.py  Order_pb2.py  Payment_pb2.py  Product_pb2.py  SensitiveRecord_pb2.py  User_pb2.py  other_pb2.py
src/generated_pb2/confluent/: meta_pb2.py
src/generated_pb2/evolution/: MyRecord_v1_pb2.py  MyRecord_v2_pb2.py
src/schemas/confluent/: meta.proto
