[project]
name = "cc-python-dynamic_precompiled-protobuf-examples"
version = "0.08.00.00"
description = "Confluent Cloud Python Dynamic or Precompiled Protobuf Examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "authlib>=1.6.9",
    "aws2-wrap>=1.4.0",
    "boto3>=1.38.0",
    "cachetools>=7.0.5",
    "confluent-kafka[schemaregistry,protobuf]>=2.13.2",
    "dotenv>=0.9.9",
    "googleapis-common-protos>=1.56.1",
    "httpx>=0.28.1",
    "protobuf>=6.30.2,<7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tink>=1.14.1",
]

[tool.setuptools]
packages = ["src"]

# Logging configuration
[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.default]
format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[tool.logging.handlers.file]
class = "logging.FileHandler"
filename = "cc-python-dynamic_precompiled-protobuf-examples.log"
formatter = "default"
level = "INFO"
mode = "w"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
formatter = "default"
level = "DEBUG"

[tool.logging.loggers.root]
level = "INFO"
handlers = ["file", "console"]
